# kaggle_competition

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml
docs/: NESTED_ENSEMBLE.md  TRANSFORMER_MODELS.md
models/: __init__.py  catboost_model.py  chronos 2 sample.py  chronos_model.py  fill eda.py  hybrid_chronos_patchtst.py  itransformer_model.py  lightgbm_model.py  patchtst_model.py  prophet_model.py  timesfm_model.py  timesnet_model.py  xgboost_model.py
notebooks/: 0. data cleaning.py  chronos tutorial.py  chronos2_tutorial.ipynb  get started.py  getting_started.ipynb  itransformer tutorial.py  itransformer_tutorial.ipynb  lighb_test.py  patchtst_tutorial.ipynb  patchtst_tutorial.py  stage_by_stage_testing.ipynb  timesFM.py  timesfm_tutorial.ipynb  timesnet.py  timesnet_tutorial.ipynb
notebooks/meta/: meta_predict.ipynb
notebooks/models/: chronos2_cv.ipynb  foundation_transformer_cv.ipynb  lightgbm_cv.ipynb  timesfm_cv.ipynb  xgboost_cv.ipynb
notebooks/pipelines/: 00_data_cleaning.ipynb
scripts/: README_gaussrank_optimization.md  chronos_finetune.py  compare_ensemble_methods.py  ensemble_predict.py  example_usage.py  full_file.py  gaussrank_sharpe_optimization.py  nested_ensemble_predict.py  predict_with_nested_ensemble.py  starter_submission.py  test_gaussrank_optimization.py  train_all_models.py  ultimate_meta_ensemble.py  universal_nested_ensemble.py
utils/: __init__.py  catalog.py  cross_validation.py  data_utils.py  meta.py  metrics.py  tuner.py
